--- a/x360ce.App.Beta/Controls/PadItem_GeneralControl.xaml
+++ b/x360ce.App.Beta/Controls/PadItem_GeneralControl.xaml
@@ -90,9 +90,10 @@
 			<TabItem>
 				<TabItem.Header>
 					<StackPanel Orientation="Horizontal">
-						<Grid Margin="0,0,3,0">
+						<!--<Grid Margin="0,0,3,0">
 							<Path Data="M 16,16 0,8 16,0 Z" Fill="{StaticResource ColorActive}" />
-						</Grid>
+						</Grid>-->
+						<ContentControl Margin="0,0,3,0" Content="{StaticResource Icon_DragAndDrop_Axis}" />
 						<TextBlock Text="NORMAL" />
 					</StackPanel>
 				</TabItem.Header>
@@ -148,9 +149,10 @@
 			<TabItem>
 				<TabItem.Header>
 					<StackPanel Orientation="Horizontal">
-						<Grid Margin="0,0,3,0">
+						<ContentControl Margin="0,0,3,0" Content="{StaticResource Icon_DragAndDrop_Axis_Inverted}" />
+						<!--<Grid Margin="0,0,3,0">
 							<Path Data="M 0,16 16,8 0,0 Z" Fill="{StaticResource ColorActive}" />
-						</Grid>
+						</Grid>-->
 						<TextBlock Text="INVERTED" />
 					</StackPanel>
 				</TabItem.Header>
@@ -221,6 +223,11 @@
 							ToolTip="Deadzone" />
 						<Label
 							Name="LeftTextBox"
+							Margin="0,0,9,0"
+							Content="0"
+							ToolTip="Y" />
+						<Label
+							Name="LeftTextBox2"
 							Margin="0"
 							Content="0"
 							ToolTip="Y" />
