--- a/x360ce.App.Beta/Controls/AxisMapControl.xaml
+++ b/x360ce.App.Beta/Controls/AxisMapControl.xaml
@@ -42,101 +42,101 @@
 				Background="White"
 				CornerRadius="5">
 				<!--  This image uses a Drawing object for its source.  -->
-					<Grid Width="170" Height="170">
-						<Path Margin="6,10,0,0" Fill="Transparent">
-							<Path.Data>
-								<RectangleGeometry x:Name="BackgroundGeometry" Rect="0,0,150,150" />
-							</Path.Data>
-						</Path>
-						<!--  DInput Arrow  -->
-						<Path Margin="6,159,0,0" Fill="Green">
-							<Path.Data>
-								<RectangleGeometry Rect="0,0,150,2" />
-							</Path.Data>
-						</Path>
-						<Polygon Margin="156,155,0,0" Fill="Green" Points="0,0 10,5 0,10" />
-						<!--  XInput Arrow  -->
-						<Path Margin="5,10,0,0" Fill="Blue">
-							<Path.Data>
-								<RectangleGeometry Rect="0,0,2,150" />
-							</Path.Data>
-						</Path>
-						<Polygon Margin="1,0,0,0" Fill="Blue" Points="0,10 5,0 10,10" />
-						<!--  XInput/DInput corner.  -->
-						<Path Margin="5,159,0,0" Fill="Black">
-							<Path.Data>
-								<RectangleGeometry Rect="0,0,2,2" />
-							</Path.Data>
-						</Path>
-						<Image
-							x:Name="MainPictureBox"
-							Width="150"
-							Height="150"
-							Margin="6,10,0,0"
-							HorizontalAlignment="Left"
-							VerticalAlignment="Top" />
-						<!--  Center line  -->
-						<Path
-							Margin="6,10,0,0"
-							Opacity="0.05"
-							Stroke="Black"
-							StrokeThickness="1">
-							<Path.Data>
-								<LineGeometry StartPoint="75,0" EndPoint="75,150" />
-							</Path.Data>
-						</Path>
-						<Path
-							Margin="6,10,0,0"
-							Opacity="0.25"
-							Stroke="Green"
-							StrokeThickness="1">
-							<Path.Data>
-								<LineGeometry x:Name="DInputLineGeometry" StartPoint="75,0" EndPoint="75,150" />
-							</Path.Data>
-						</Path>
-						<Path
-							Margin="6,10,0,0"
-							Fill="Green"
-							StrokeThickness="1"
-							Visibility="Collapsed">
-							<Path.Data>
-								<EllipseGeometry
-									x:Name="DInputEllipse"
-									Center="75,75"
-									RadiusX="3"
-									RadiusY="3" />
-							</Path.Data>
-						</Path>
-						<!--  Center line.  -->
-						<Path
-							Margin="6,10,0,0"
-							Opacity="0.05"
-							Stroke="Black"
-							StrokeThickness="1">
-							<Path.Data>
-								<LineGeometry StartPoint="0,75" EndPoint="150,75" />
-							</Path.Data>
-						</Path>
+				<Grid Width="170" Height="170">
+					<Path Margin="6,10,0,0" Fill="Transparent">
+						<Path.Data>
+							<RectangleGeometry x:Name="BackgroundGeometry" Rect="0,0,150,150" />
+						</Path.Data>
+					</Path>
+					<!--  DInput Arrow  -->
+					<Path Margin="6,159,0,0" Fill="Green">
+						<Path.Data>
+							<RectangleGeometry Rect="0,0,150,2" />
+						</Path.Data>
+					</Path>
+					<Polygon Margin="156,155,0,0" Fill="Green" Points="0,0 10,5 0,10" />
+					<!--  XInput Arrow  -->
+					<Path Margin="5,10,0,0" Fill="Blue">
+						<Path.Data>
+							<RectangleGeometry Rect="0,0,2,150" />
+						</Path.Data>
+					</Path>
+					<Polygon Margin="1,0,0,0" Fill="Blue" Points="0,10 5,0 10,10" />
+					<!--  XInput/DInput corner.  -->
+					<Path Margin="5,159,0,0" Fill="Black">
+						<Path.Data>
+							<RectangleGeometry Rect="0,0,2,2" />
+						</Path.Data>
+					</Path>
+					<Image
+						x:Name="MainPictureBox"
+						Width="150"
+						Height="150"
+						Margin="6,10,0,0"
+						HorizontalAlignment="Left"
+						VerticalAlignment="Top" />
+					<!--  Center line  -->
+					<Path
+						Margin="6,10,0,0"
+						Opacity="0.05"
+						Stroke="Black"
+						StrokeThickness="1">
+						<Path.Data>
+							<LineGeometry StartPoint="75,0" EndPoint="75,150" />
+						</Path.Data>
+					</Path>
+					<Path
+						Margin="6,10,0,0"
+						Opacity="0.25"
+						Stroke="Green"
+						StrokeThickness="1">
+						<Path.Data>
+							<LineGeometry x:Name="DInputLineGeometry" StartPoint="75,0" EndPoint="75,150" />
+						</Path.Data>
+					</Path>
+					<Path
+						Margin="6,10,0,0"
+						Fill="Green"
+						StrokeThickness="1"
+						Visibility="Collapsed">
+						<Path.Data>
+							<EllipseGeometry
+								x:Name="DInputEllipse"
+								Center="75,75"
+								RadiusX="3"
+								RadiusY="3" />
+						</Path.Data>
+					</Path>
+					<!--  Center line.  -->
+					<Path
+						Margin="6,10,0,0"
+						Opacity="0.05"
+						Stroke="Black"
+						StrokeThickness="1">
+						<Path.Data>
+							<LineGeometry StartPoint="0,75" EndPoint="150,75" />
+						</Path.Data>
+					</Path>
 
-						<Path
-							Margin="6,10,0,0"
-							Opacity="0.25"
-							Stroke="Blue"
-							StrokeThickness="1">
-							<Path.Data>
-								<LineGeometry x:Name="XInputLineGeometry" StartPoint="0,75" EndPoint="150,75" />
-							</Path.Data>
-						</Path>
-						<Path Margin="6,10,0,0" Fill="DarkRed" StrokeThickness="1">
-							<Path.Data>
-								<EllipseGeometry
-									x:Name="XInputEllipse"
-									Center="75,75"
-									RadiusX="3"
-									RadiusY="3" />
-							</Path.Data>
-						</Path>
-					</Grid>
+					<Path
+						Margin="6,10,0,0"
+						Opacity="0.25"
+						Stroke="Blue"
+						StrokeThickness="1">
+						<Path.Data>
+							<LineGeometry x:Name="XInputLineGeometry" StartPoint="0,75" EndPoint="150,75" />
+						</Path.Data>
+					</Path>
+					<Path Margin="6,10,0,0" Fill="DarkRed" StrokeThickness="1">
+						<Path.Data>
+							<EllipseGeometry
+								x:Name="XInputEllipse"
+								Center="75,75"
+								RadiusX="3"
+								RadiusY="3" />
+						</Path.Data>
+					</Path>
+				</Grid>
 			</Border>
 			<!--  Settings  -->
 			<Grid Grid.Column="1" Margin="10,0,0,0" VerticalAlignment="Top">
@@ -153,68 +153,53 @@
 					<RowDefinition />
 					<RowDefinition />
 				</Grid.RowDefinitions>
-				<Label Name="DInputLabel" Height="26" Content="DInput" />
+				<Grid.Resources>
+					<Style BasedOn="{StaticResource TextBox_Default}" TargetType="TextBox">
+						<Setter Property="Width" Value="50" />
+						<Setter Property="HorizontalContentAlignment" Value="Right" />
+						<Setter Property="IsReadOnly" Value="True" />
+						<Setter Property="IsTabStop" Value="False" />
+						<Setter Property="Text" Value="0 %" />
+					</Style>
+				</Grid.Resources>
+				<Label Name="DInputLabel" Content="DInput" />
 				<Label
 					Name="DInputValueLabel"
 					Grid.Column="1"
+					Height="26"
 					Margin="18,0,0,0"
 					Content="0"
 					Foreground="Green" />
-
-				<Label
-					Name="XInputLabel"
-					Grid.Row="1"
-					Height="26"
-					Content="XInput" />
+				<Label Name="XInputLabel" Grid.Row="1" Content="XInput" />
 				<Label
 					Name="XInputValueLabel"
 					Grid.Row="1"
 					Grid.Column="1"
+					Height="26"
 					Margin="18,0,0,0"
 					Content="0"
 					Foreground="Blue" />
-
 				<Label
 					Name="AntiDeadZoneLabel"
 					Grid.Row="2"
 					VerticalAlignment="Center"
 					Content="Anti-Dead Zone" />
 				<StackPanel Grid.Row="2" Grid.Column="1" Orientation="Horizontal">
-					<Slider Name="AntiDeadZoneTrackBar" VerticalAlignment="Center" />
-					<JcControls:NumericUpDown x:Name="AntiDeadZoneUpDown" Value="0" />
-					<TextBox
-						Name="AntiDeadZoneTextBox"
-						Width="50"
-						HorizontalContentAlignment="Right"
-						IsReadOnly="True"
-						IsTabStop="False"
-						Text="0 %" />
+					<Slider Name="AntiDeadZoneTrackBar" />
+					<JcControls:NumericUpDown Name="AntiDeadZoneUpDown" Value="0" />
+					<TextBox Name="AntiDeadZoneTextBox" />
 				</StackPanel>
 				<Label Name="DeadZoneLabel" Grid.Row="3" Content="Dead Zone" />
 				<StackPanel Grid.Row="3" Grid.Column="1" Orientation="Horizontal">
-					<Slider Name="DeadZoneTrackBar" VerticalAlignment="Center" />
-					<JcControls:NumericUpDown x:Name="DeadZoneUpDown" Value="0" />
-					<TextBox
-						Name="DeadZoneTextBox"
-						Width="50"
-						HorizontalAlignment="Left"
-						HorizontalContentAlignment="Right"
-						IsReadOnly="True"
-						IsTabStop="False"
-						Text="0 %" />
+					<Slider Name="DeadZoneTrackBar" />
+					<JcControls:NumericUpDown Name="DeadZoneUpDown" Value="0" />
+					<TextBox Name="DeadZoneTextBox" />
 				</StackPanel>
 				<Label Name="SensitivityLabel" Grid.Row="4" Content="Sensitivity" />
 				<StackPanel Grid.Row="4" Grid.Column="1" Orientation="Horizontal">
-					<Slider Name="LinearTrackBar" VerticalAlignment="Center" />
+					<Slider Name="LinearTrackBar" />
 					<JcControls:NumericUpDown Name="LinearUpDown" ValueChanged="LinearUpDown_ValueChanged" Value="0" />
-					<TextBox
-						Name="LinearTextBox"
-						Width="50"
-						HorizontalAlignment="Left"
-						HorizontalContentAlignment="Right"
-						IsReadOnly="True"
-						IsTabStop="False"
-						Text="0 %" />
+					<TextBox Name="LinearTextBox" />
 				</StackPanel>
 				<Label
 					Name="SensitivityTooltip"
