--- a/x360ce.App.Beta/Controls/PresetsListControl.xaml
+++ b/x360ce.App.Beta/Controls/PresetsListControl.xaml
@@ -16,15 +16,12 @@
 			<RowDefinition Height="Auto" />
 			<RowDefinition Height="*" />
 		</Grid.RowDefinitions>
-				<Button
-					Name="RefreshButton"
-					HorizontalAlignment="Right"
-					Click="RefreshButton_Click">
-					<StackPanel>
-						<ContentControl Content="{StaticResource Icon_Refresh}" />
-						<Label Content="Refresh" />
-					</StackPanel>
-				</Button>
+		<Button Name="RefreshButton" HorizontalAlignment="Right" Click="RefreshButton_Click">
+			<StackPanel>
+				<ContentControl Content="{StaticResource Icon_Refresh}" />
+				<Label Content="Refresh" />
+			</StackPanel>
+		</Button>
 		<Border
 			Grid.Row="1"
 			Height="1"
@@ -61,13 +58,13 @@
 					Binding="{Binding VendorName}"
 					EditingElementStyle="{StaticResource TextBoxCell}"
 					ElementStyle="{StaticResource TextBlockCell}"
-					Header="Device Vendor Name" />
+					Header="Vendor" />
 				<DataGridTextColumn
 					Width="*"
 					Binding="{Binding ProductName}"
 					EditingElementStyle="{StaticResource TextBoxCell}"
 					ElementStyle="{StaticResource TextBlockCell}"
-					Header="DeviceName" />
+					Header="Name" />
 			</DataGrid.Columns>
 			<DataGrid.CellStyle>
 				<Style TargetType="DataGridCell">
