--- a/x360ce.App.Beta/Controls/UserProgramListControl.xaml
+++ b/x360ce.App.Beta/Controls/UserProgramListControl.xaml
@@ -1,127 +1,127 @@
 ﻿<UserControl
-    x:Class="x360ce.App.Controls.UserProgramListControl"
-    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:converters="clr-namespace:x360ce.App.Converters"
-    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:local="clr-namespace:x360ce.App.Controls"
-    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    d:Height="200"
-    d:Width="900"
-    Loaded="UserControl_Loaded"
-    Unloaded="UserControl_Unloaded"
-    mc:Ignorable="d">
-    <Grid VerticalAlignment="Stretch">
-        <Grid.RowDefinitions>
-            <RowDefinition Height="Auto" />
-            <RowDefinition Height="*" />
-            <RowDefinition Height="Auto" />
-        </Grid.RowDefinitions>
-        <StackPanel HorizontalAlignment="Left" Orientation="Horizontal">
-            <Button Name="ScanButton" Click="ScanButton_Click">
-                <StackPanel>
-                    <ContentControl Content="{StaticResource Icon_magnifying_glass}" />
-                    <Label Content="Scan" />
-                </StackPanel>
-            </Button>
-            <Button Name="AddButton" Margin="0,3,3,3" Click="AddButton_Click">
-                <StackPanel>
-                    <ContentControl Content="{StaticResource Icon_plus}" />
-                    <Label Content="Add..." />
-                </StackPanel>
-            </Button>
-            <Button Name="DeleteButton" Click="DeleteButton_Click">
-                <StackPanel>
-                    <ContentControl Content="{StaticResource Icon_delete}" />
-                    <Label Content="Delete" />
-                </StackPanel>
-            </Button>
-            <Button Name="SaveButton" Margin="0,3,3,3" Click="SaveButton_Click">
-                <StackPanel>
-                    <ContentControl Content="{StaticResource Icon_save}" />
-                    <Label Content="Save" />
-                </StackPanel>
-            </Button>
-            <Menu x:Name="ShowMenu" VerticalAlignment="Center">
-                <MenuItem
-                    x:Name="ShowMenuItem"
-                    Margin="3,3,3,3"
-                    Padding="3,3,3,3"
-                    Header="Show: All">
-                    <MenuItem.Icon>
-                        <ContentControl Content="{StaticResource Icon_radio_button_group}" />
-                    </MenuItem.Icon>
-                    <MenuItem Click="ShowMenuItem_Click" Header="Show: All">
-                        <MenuItem.Icon>
-                            <ContentControl Content="{StaticResource Icon_radio_button_group}" />
-                        </MenuItem.Icon>
-                    </MenuItem>
-                    <MenuItem Click="ShowMenuItem_Click" Header="Show: Enabled">
-                        <MenuItem.Icon>
-                            <ContentControl Content="{StaticResource Icon_radio_button_selected}" />
-                        </MenuItem.Icon>
-                    </MenuItem>
-                    <MenuItem Click="ShowMenuItem_Click" Header="Show: Disabled">
-                        <MenuItem.Icon>
-                            <ContentControl Content="{StaticResource Icon_radio_button_unselected}" />
-                        </MenuItem.Icon>
-                    </MenuItem>
-                </MenuItem>
-            </Menu>
-        </StackPanel>
-        <StackPanel HorizontalAlignment="Right" Orientation="Horizontal">
-            <Button Name="OpenButton" Click="OpenButton_Click">
-                <StackPanel>
-                    <ContentControl Content="{StaticResource Icon_FolderOpen}" />
-                    <Label Content="Open..." />
-                </StackPanel>
-            </Button>
-            <Button Name="StartButton" Margin="0,3,3,3" Click="StartButton_Click">
-                <StackPanel>
-                    <ContentControl Content="{StaticResource Icon_media_play}" />
-                    <Label Content="Start" />
-                </StackPanel>
-            </Button>
-        </StackPanel>
-        <DataGrid
-            xmlns:local="clr-namespace:x360ce.App.Converters"
-            x:Name="MainDataGrid"
-            Grid.Row="1"
-            AutoGenerateColumns="False"
-            Background="White"
-            IsReadOnly="True"
-            KeyDown="MainDataGrid_KeyDown"
-            SelectionChanged="MainDataGrid_SelectionChanged">
-            <DataGrid.Columns>
-                <DataGridCheckBoxColumn Binding="{Binding IsEnabled}" EditingElementStyle="{StaticResource CheckBoxCell_Default}" ElementStyle="{StaticResource CheckBoxCell_Default}" />
-                <DataGridTextColumn
-                    Binding="{Binding FileName}"
-                    EditingElementStyle="{StaticResource TextBoxCell}"
-                    ElementStyle="{StaticResource TextBlockCell}"
-                    Header="File Name" />
-                <DataGridTextColumn
-                    Binding="{Binding FileProductName}"
-                    EditingElementStyle="{StaticResource TextBoxCell}"
-                    ElementStyle="{StaticResource TextBlockCell}"
-                    Header="Product Name" />
-                <DataGridTextColumn
-                    Binding="{Binding ProcessorArchitecture}"
-                    EditingElementStyle="{StaticResource TextBoxCell}"
-                    ElementStyle="{StaticResource TextBlockCell}"
-                    Header="Platform" />
-                <DataGridTextColumn
-                    Width="*"
-                    Binding="{Binding FullPath}"
-                    EditingElementStyle="{StaticResource TextBoxCell}"
-                    ElementStyle="{StaticResource TextBlockCell}"
-                    Header="File Folder" />
-            </DataGrid.Columns>
-        </DataGrid>
-        <Border Grid.Row="2" Background="{StaticResource BackgroundDark}">
-            <StackPanel Name="ScanProgressPanel" Orientation="Horizontal" Margin="3">
-                <TextBlock Name="ScanProgressLevel0Label" Text="[ScanProgressLevel0Label]" />
-                <TextBlock Margin="20,0,0,0" Name="ScanProgressLevel1Label" Text="[ScanProgressLevel1Label]" />
-            </StackPanel>
-        </Border>
-    </Grid>
+	x:Class="x360ce.App.Controls.UserProgramListControl"
+	xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+	xmlns:converters="clr-namespace:x360ce.App.Converters"
+	xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+	xmlns:local="clr-namespace:x360ce.App.Controls"
+	xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+	d:Height="200"
+	d:Width="900"
+	Loaded="UserControl_Loaded"
+	Unloaded="UserControl_Unloaded"
+	mc:Ignorable="d">
+	<Grid VerticalAlignment="Stretch">
+		<Grid.RowDefinitions>
+			<RowDefinition Height="Auto" />
+			<RowDefinition Height="*" />
+			<RowDefinition Height="Auto" />
+		</Grid.RowDefinitions>
+		<StackPanel HorizontalAlignment="Left" Orientation="Horizontal">
+			<Button Name="ScanButton" Click="ScanButton_Click">
+				<StackPanel>
+					<ContentControl Content="{StaticResource Icon_magnifying_glass}" />
+					<Label Content="Scan" />
+				</StackPanel>
+			</Button>
+			<Button Name="AddButton" Margin="0,3,3,3" Click="AddButton_Click">
+				<StackPanel>
+					<ContentControl Content="{StaticResource Icon_plus}" />
+					<Label Content="Add..." />
+				</StackPanel>
+			</Button>
+			<Button Name="DeleteButton" Click="DeleteButton_Click">
+				<StackPanel>
+					<ContentControl Content="{StaticResource Icon_delete}" />
+					<Label Content="Delete" />
+				</StackPanel>
+			</Button>
+			<Button Name="SaveButton" Margin="0,3,3,3" Click="SaveButton_Click">
+				<StackPanel>
+					<ContentControl Content="{StaticResource Icon_save}" />
+					<Label Content="Save" />
+				</StackPanel>
+			</Button>
+			<Menu x:Name="ShowMenu" VerticalAlignment="Center">
+				<MenuItem
+					x:Name="ShowMenuItem"
+					Margin="3,3,3,3"
+					Padding="3,3,3,3"
+					Header="Show: All">
+					<MenuItem.Icon>
+						<ContentControl Content="{StaticResource Icon_radio_button_group}" />
+					</MenuItem.Icon>
+					<MenuItem Click="ShowMenuItem_Click" Header="Show: All">
+						<MenuItem.Icon>
+							<ContentControl Content="{StaticResource Icon_radio_button_group}" />
+						</MenuItem.Icon>
+					</MenuItem>
+					<MenuItem Click="ShowMenuItem_Click" Header="Show: Enabled">
+						<MenuItem.Icon>
+							<ContentControl Content="{StaticResource Icon_radio_button_selected}" />
+						</MenuItem.Icon>
+					</MenuItem>
+					<MenuItem Click="ShowMenuItem_Click" Header="Show: Disabled">
+						<MenuItem.Icon>
+							<ContentControl Content="{StaticResource Icon_radio_button_unselected}" />
+						</MenuItem.Icon>
+					</MenuItem>
+				</MenuItem>
+			</Menu>
+		</StackPanel>
+		<StackPanel HorizontalAlignment="Right" Orientation="Horizontal">
+			<Button Name="OpenButton" Click="OpenButton_Click">
+				<StackPanel>
+					<ContentControl Content="{StaticResource Icon_FolderOpen}" />
+					<Label Content="Open..." />
+				</StackPanel>
+			</Button>
+			<Button Name="StartButton" Margin="0,3,3,3" Click="StartButton_Click">
+				<StackPanel>
+					<ContentControl Content="{StaticResource Icon_media_play}" />
+					<Label Content="Start" />
+				</StackPanel>
+			</Button>
+		</StackPanel>
+		<DataGrid
+			xmlns:local="clr-namespace:x360ce.App.Converters"
+			x:Name="MainDataGrid"
+			Grid.Row="1"
+			AutoGenerateColumns="False"
+			Background="White"
+			IsReadOnly="True"
+			KeyDown="MainDataGrid_KeyDown"
+			SelectionChanged="MainDataGrid_SelectionChanged">
+			<DataGrid.Columns>
+				<DataGridCheckBoxColumn Binding="{Binding IsEnabled}" EditingElementStyle="{StaticResource CheckBoxCell_Default}" ElementStyle="{StaticResource CheckBoxCell_Default}" />
+				<DataGridTextColumn
+					Binding="{Binding FileName}"
+					EditingElementStyle="{StaticResource TextBoxCell}"
+					ElementStyle="{StaticResource TextBlockCell}"
+					Header="File" />
+				<DataGridTextColumn
+					Binding="{Binding FileProductName}"
+					EditingElementStyle="{StaticResource TextBoxCell}"
+					ElementStyle="{StaticResource TextBlockCell}"
+					Header="Product" />
+				<DataGridTextColumn
+					Binding="{Binding ProcessorArchitecture}"
+					EditingElementStyle="{StaticResource TextBoxCell}"
+					ElementStyle="{StaticResource TextBlockCell}"
+					Header="Platform" />
+				<DataGridTextColumn
+					Width="*"
+					Binding="{Binding FullPath}"
+					EditingElementStyle="{StaticResource TextBoxCell}"
+					ElementStyle="{StaticResource TextBlockCell}"
+					Header="Folder" />
+			</DataGrid.Columns>
+		</DataGrid>
+		<Border Grid.Row="2" Background="{StaticResource BackgroundDark}">
+			<StackPanel Name="ScanProgressPanel" Margin="3" Orientation="Horizontal">
+				<TextBlock Name="ScanProgressLevel0Label" Text="[ScanProgressLevel0Label]" />
+				<TextBlock Name="ScanProgressLevel1Label" Margin="20,0,0,0" Text="[ScanProgressLevel1Label]" />
+			</StackPanel>
+		</Border>
+	</Grid>
 </UserControl>
