--- a/x360ce.App.Beta/Controls/UserDevicesControl.xaml
+++ b/x360ce.App.Beta/Controls/UserDevicesControl.xaml
@@ -12,63 +12,6 @@
 	Unloaded="UserControl_Unloaded"
 	mc:Ignorable="d">
 
-	<UserControl.Resources>
-		<!--  GradientBrush  -->
-		<LinearGradientBrush x:Key="GradientBrushStyle" StartPoint="1,0" EndPoint="1,1">
-			<GradientStop Offset="0" Color="{DynamicResource {x:Static SystemColors.WindowColorKey}}" />
-			<GradientStop Offset="1" Color="{DynamicResource {x:Static SystemColors.ControlColorKey}}" />
-		</LinearGradientBrush>
-		<!--  DataGridColumnHeader  -->
-		<Style x:Key="DataGridHeaderStyle" TargetType="DataGridColumnHeader">
-			<Setter Property="Template">
-				<Setter.Value>
-					<ControlTemplate TargetType="DataGridColumnHeader">
-						<Grid Background="{DynamicResource GradientBrushStyle}">
-							<!--  Title  -->
-							<ContentPresenter Margin="6,3,14,3" VerticalAlignment="Center" Content="{TemplateBinding Content}" />
-							<!--  Sorting Triangle  -->
-							<Path
-								x:Name="SortingIndicator"
-								Width="10"
-								Height="5"
-								Margin="0,0,3,0"
-								HorizontalAlignment="Right"
-								VerticalAlignment="Center"
-								Data="M 5,0 L 0,5 L 10,5 Z"
-								Fill="Black"
-								Opacity="1"
-								RenderTransformOrigin="0.5,0.5"
-								Visibility="Hidden" />
-						</Grid>
-						<!--  Header Triggers  -->
-						<ControlTemplate.Triggers>
-							<Trigger Property="SortDirection" Value="Ascending">
-								<Setter TargetName="SortingIndicator" Property="Visibility" Value="Visible" />
-								<Setter TargetName="SortingIndicator" Property="RenderTransform">
-									<Setter.Value>
-										<TransformGroup>
-											<ScaleTransform ScaleY="-1" />
-										</TransformGroup>
-									</Setter.Value>
-								</Setter>
-							</Trigger>
-							<Trigger Property="SortDirection" Value="Descending">
-								<Setter TargetName="SortingIndicator" Property="Visibility" Value="Visible" />
-								<Setter TargetName="SortingIndicator" Property="RenderTransform">
-									<Setter.Value>
-										<TransformGroup>
-											<ScaleTransform ScaleY="1" />
-										</TransformGroup>
-									</Setter.Value>
-								</Setter>
-							</Trigger>
-						</ControlTemplate.Triggers>
-					</ControlTemplate>
-				</Setter.Value>
-			</Setter>
-		</Style>
-	</UserControl.Resources>
-
 	<Grid VerticalAlignment="Stretch">
 		<Grid.RowDefinitions>
 			<RowDefinition Height="Auto" />
@@ -155,24 +98,20 @@
 					<converters:ConnectionClassToImageConverter x:Key="ConnectionClassToImageConverter" />
 					<converters:MapRpmTypeConverter x:Key="MapRpmTypeConverter" />
 					<converters:BooleanToVisibilityConverter x:Key="_BooleanToVisibilityConverter" />
+					<Style BasedOn="{StaticResource DataGridHeader_Sorting}" TargetType="DataGridColumnHeader" />
 				</DataGrid.Resources>
 
-				<!--  ColumnHeaderStyle  -->
-				<DataGrid.ColumnHeaderStyle>
-					<StaticResource ResourceKey="DataGridHeaderStyle" />
-				</DataGrid.ColumnHeaderStyle>
-
-				<!--  Cell  -->
+				<!--  Cell - Rows of ofline controllers are transparent.  -->
 				<DataGrid.CellStyle>
 					<Style BasedOn="{StaticResource DataGridCell_Default}" TargetType="DataGridCell">
 						<Style.Triggers>
 							<DataTrigger Binding="{Binding IsOnline}" Value="False">
 								<Setter Property="Opacity" Value="0.2" />
-								<Setter Property="IsHitTestVisible" Value="False" />
+								<!--<Setter Property="IsHitTestVisible" Value="False" />-->
 							</DataTrigger>
 							<DataTrigger Binding="{Binding IsOnline}" Value="True">
 								<Setter Property="Opacity" Value="1" />
-								<Setter Property="IsHitTestVisible" Value="True" />
+								<!--<Setter Property="IsHitTestVisible" Value="True" />-->
 							</DataTrigger>
 						</Style.Triggers>
 					</Style>
@@ -180,22 +119,14 @@
 
 				<DataGrid.Columns>
 					<!--  First 6 columns are same on: UserSettingMapListControl, UserDevicesControl  -->
-					<DataGridTemplateColumn
-						MinWidth="55"
-						Header="Active"
-						IsReadOnly="True"
-						SortMemberPath="IsOnline">
+					<DataGridTemplateColumn Header="Active" IsReadOnly="True" SortMemberPath="IsOnline">
 						<DataGridTemplateColumn.CellTemplate>
 							<DataTemplate>
-								<ContentControl Content="{Binding IsOnline, Converter={StaticResource BoolToImageSourceConverter}}" />
+								<ContentControl Content="{Binding IsOnline, Converter={StaticResource BoolToImageSourceConverter}}" Style="{StaticResource ContentControlCell_Default}" />
 							</DataTemplate>
 						</DataGridTemplateColumn.CellTemplate>
 					</DataGridTemplateColumn>
-					<DataGridTemplateColumn
-						MinWidth="85"
-						Header="Connection"
-						IsReadOnly="True"
-						SortMemberPath="ConnectionClass">
+					<DataGridTemplateColumn Header="Connection" IsReadOnly="True" SortMemberPath="ConnectionClass">
 						<DataGridTemplateColumn.CellTemplate>
 							<DataTemplate>
 								<Image Source="{Binding ConnectionClass, Converter={StaticResource ConnectionClassToImageConverter}}" Style="{StaticResource ImageCell_Default}" />
@@ -203,7 +134,6 @@
 						</DataGridTemplateColumn.CellTemplate>
 					</DataGridTemplateColumn>
 					<!--<DataGridTemplateColumn
-                    MinWidth="60"
                     Header="On"
                     Width="SizeToHeader"
                     x:Name="IsEnabledColumn"
@@ -216,52 +146,37 @@
                 </DataGridTemplateColumn>-->
 					<DataGridCheckBoxColumn
 						x:Name="IsEnabledColumn"
-						Width="SizeToHeader"
-						MinWidth="40"
 						Binding="{Binding IsEnabled, IsAsync=True, Mode=TwoWay}"
 						EditingElementStyle="{StaticResource CheckBoxCell_Default}"
 						ElementStyle="{StaticResource CheckBoxCell_Default}"
 						Header="On" />
 					<DataGridTextColumn
-						Width="SizeToHeader"
-						MinWidth="85"
 						Binding="{Binding InstanceId}"
 						EditingElementStyle="{StaticResource TextBoxCell}"
 						ElementStyle="{StaticResource TextBlockCell}"
 						Header="Instance ID"
 						SortDirection="{x:Null}" />
 					<DataGridTextColumn
-						MinWidth="100"
 						Binding="{Binding HidManufacturer}"
 						EditingElementStyle="{StaticResource TextBoxCell}"
 						ElementStyle="{StaticResource TextBlockCell}"
 						Header="Vendor" />
 					<DataGridTextColumn
-						MinWidth="95"
 						Binding="{Binding ProductName}"
 						EditingElementStyle="{StaticResource TextBoxCell}"
 						ElementStyle="{StaticResource TextBlockCell}"
 						Header="Device" />
 					<DataGridTextColumn
 						Width="*"
-						MinWidth="180"
+						MinWidth="150"
 						Binding="{Binding HidDeviceId}"
 						EditingElementStyle="{StaticResource TextBoxCell}"
 						ElementStyle="{StaticResource TextBlockCell}"
 						Header="HID Guardian Device ID" />
-					<DataGridTemplateColumn
-						x:Name="IsHiddenColumn"
-						Width="SizeToHeader"
-						MinWidth="65"
-						Header="Hidden"
-						SortMemberPath="IsHidden">
+					<DataGridTemplateColumn x:Name="IsHiddenColumn" Header="Hidden" SortMemberPath="IsHidden">
 						<DataGridTemplateColumn.CellTemplate>
 							<DataTemplate>
-								<CheckBox
-									HorizontalAlignment="Center"
-									IsChecked="{Binding IsHidden}"
-									Style="{StaticResource CheckBoxCell_Default}"
-									Visibility="{Binding AllowHide, Converter={StaticResource _BooleanToVisibilityConverter}}" />
+								<CheckBox IsChecked="{Binding IsHidden}" Style="{StaticResource CheckBoxCell_Default}" Visibility="{Binding AllowHide, Converter={StaticResource _BooleanToVisibilityConverter}}" />
 							</DataTemplate>
 						</DataGridTemplateColumn.CellTemplate>
 					</DataGridTemplateColumn>
